@@ -1,6 +1,6 @@
 ## Process this file with Automake to create Makefile.in
 ##
-##  	Copyright (C) 1998, 1999, 2000 Free Software Foundation, Inc.
+##  	Copyright (C) 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
 ##
 ##   This file is part of GUILE.
 ##   
@@ -46,7 +46,7 @@ libguile_la_SOURCES = alist.c arbiters.c async.c backtrace.c boolean.c	     \
     hashtab.c hooks.c init.c ioext.c iselect.c keywords.c lang.c list.c	     \
     load.c macros.c mallocs.c modules.c numbers.c objects.c objprop.c	     \
     options.c pairs.c ports.c print.c procprop.c procs.c properties.c	     \
-    random.c rdelim.c read.c root.c scmsigs.c script.c simpos.c smob.c	     \
+    random.c rdelim.c read.c root.c rw.c scmsigs.c script.c simpos.c smob.c  \
     sort.c srcprop.c stackchk.c stacks.c stime.c strings.c strop.c	     \
     strorder.c strports.c struct.c symbols.c tag.c throw.c values.c	     \
     variable.c vectors.c version.c vports.c weaks.c
@@ -57,7 +57,7 @@ DOT_X_FILES = alist.x arbiters.x async.x backtrace.x boolean.x chars.x	    \
     gsubr.x guardians.x hash.x hashtab.x hooks.x init.x ioext.x iselect.x   \
     keywords.x lang.x list.x load.x macros.x mallocs.x modules.x \
     numbers.x objects.x objprop.x options.x pairs.x ports.x print.x \
-    procprop.x procs.x properties.x random.x rdelim.x read.x root.x	    \
+    procprop.x procs.x properties.x random.x rdelim.x read.x root.x rw.x \
     scmsigs.x script.x simpos.x smob.x sort.x srcprop.x	    \
     stackchk.x stacks.x stime.x strings.x strop.x strorder.x strports.x	    \
     struct.x symbols.x tag.x throw.x values.x variable.x vectors.x	    \
@@ -73,7 +73,7 @@ DOT_DOC_FILES = alist.doc arbiters.doc async.doc backtrace.doc		   \
     iselect.doc keywords.doc lang.doc list.doc load.doc macros.doc	   \
     mallocs.doc modules.doc numbers.doc objects.doc objprop.doc \
     options.doc pairs.doc ports.doc print.doc procprop.doc	   \
-    procs.doc properties.doc random.doc rdelim.doc read.doc root.doc	   \
+    procs.doc properties.doc random.doc rdelim.doc read.doc root.doc rw.doc \
     scmsigs.doc script.doc simpos.doc smob.doc sort.doc	   \
     srcprop.doc stackchk.doc stacks.doc stime.doc strings.doc strop.doc	   \
     strorder.doc strports.doc struct.doc symbols.doc tag.doc throw.doc	   \
@@ -118,7 +118,7 @@ modinclude_HEADERS = __scm.h alist.h arbiters.h async.h backtrace.h boolean.h \
     iselect.h keywords.h lang.h list.h load.h macros.h mallocs.h modules.h    \
     net_db.h numbers.h objects.h objprop.h options.h pairs.h ports.h posix.h  \
     regex-posix.h print.h procprop.h procs.h properties.h random.h ramap.h    \
-    rdelim.h read.h root.h scmsigs.h validate.h script.h simpos.h smob.h      \
+    rdelim.h read.h root.h rw.h scmsigs.h validate.h script.h simpos.h smob.h \
     snarf.h socket.h sort.h srcprop.h stackchk.h stacks.h stime.h strings.h   \
     strop.h strorder.h strports.h struct.h symbols.h tag.h tags.h threads.h   \
     throw.h unif.h values.h variable.h vectors.h version.h vports.h weaks.h
